style.css
#map {
    height: 400px;
    width: 100%;
    justify-content: right;
    align-items: right;
    float: right;
    
    
}

.searchHeaders {
   background-color: rgba(211, 211, 211, 0.771);
   border-radius: 10px;
}

.title-bar {
    background: none;
    color: black;
}
.top-bar {
    background: none;
   
 }
  
 .dropdown.menu {

    background: none;
   
 }
  
 body {
    background-image: url("assets/banner-img.jpg");
    background-size: cover;
    background-attachment: fixed;
    font-family: 'Raleway', serif;
 }
  
 #map {
    height: 400px;
    width: 100%;
    justify-content: right;
    align-items: right;
 }
  
 html, body {
    height: 100%;
    margin: 0;
    padding: 0;
 }

.logo {
    background-color: black;
    border-radius: 5px;
}

.thumbnail {
    border-color: black;
}

.card {
    background-color: black;
    border-radius: 5px;
}
  
 #search-parameters {
    margin:2rem;
    align-items:center;
    justify-content: center;
 }
  
 .media-object {
    justify-content:center;
    align-items:stretch;
    margin-top:1rem;
 }
  
 /* welcome to brewery finder */
 #welcome-to-brewery-finder {
    align-items:center;
    color: gainsboro;
    font-family: 'Raleway', serif;
 }
  
 label {
    color: black;
    font-weight: bold;
    padding: 5px;
 }
  
 .search-criteria {
     border-radius: 5px;
     border-color: black;
     
 }
  
  
 #find-breweries-button {
    margin-top:25px;
    border-radius: 3px;
    background-color: rgb(199,156,16);
    border-color: black;
 }

 
  
  
 a.clickable-navbar-link {
    font-weight:bold;
    color: black;
    
 }
  
 a:hover{
    background-color:rgb(199,156,16);
    /*color:white;*/
    font-weight:bold;
 }
  
  
  
 #navbar-brewery-finder {
    font-size:1.1em;
 }
  
  
 input:focus {
    outline-color:yellow;
 }
  
  
 #yelp-modal {
    width: 80%;
    height: 80%;
    border: 10px;
    justify-content: center;
    text-align: center;
    background-color: black;
    outline-color: white;
    color: white;
    font-family: 'Raleway', serif;
   
 }

 #brewInfo {
     font-family: 'Raleway', serif;
 }
  
 .dynamicallyCreatedButtons {
    background-color: rgba(211, 211, 211, 0.803);
    color: black;
    font-weight: bolder;
    width: 100%;
    text-align: center;
    display: flex;
    height: auto;
    
    align-items: center;
    border-radius: 10px;
    
    
 }
 .success .button {
   background-color: transparent;
   color: black;
   font-weight: bolder;
 }

 .dynamicallyCreatedButtons:hover {
    background-color: black;
    opacity: 80%;
 }

.rating {
    margin: 2px;
    font-size: 18px;
}

.gm-style-iw-d {
   color: #C89E09;
}

